# bazel_go_codegen_example

./: .gitignore  BUILD.bazel  WORKSPACE
greeter/: BUILD.bazel  config.json  greeter.go
hellogen/: BUILD.bazel  hellogen.bzl  hellogen.go
