load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "hellogen_lib",
    srcs = ["hellogen.go"],
    importpath = "github.com/kpurdon/bazel_go_codegen_example/hellogen",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "hellogen",
    embed = [":hellogen_lib"],
    visibility = ["//visibility:public"],
)
